fixed bckground on mobile bug

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,6 @@ transition: .4s ;
 
  .background{
     width: auto;
-    left: auto;
  }
 }
 
